--- a/osm-point.html
+++ b/osm-point.html
@@ -2,7 +2,8 @@
 <script src="http://openlayers.org/en/v3.11.2/build/ol.js"></script>
 
 <!--
-An open street map element based on polymer 1.0 .
+The `osm-point` element is used within the `osm-poly` element, 
+which will connect the points to lines. See `osm-poly` documentation.
 
 @demo demo/index.html
 -->
