remove png images and add svg path

--- a/demo/index.html
+++ b/demo/index.html
@@ -93,6 +93,9 @@
             latitude="{{ latitude }}" 
             zoom="{{ zoom }}">
               <osm-layer source="{{ mapSource }}"></osm-layer>
+              <osm-marker longitude="10.7001245" latitude="53.8338072"></osm-marker>
+              <osm-marker color="#00cc00" longitude="10.7000245" latitude="53.8638072"></osm-marker>
+              <osm-marker color="#0000cc" longitude="10.7010245" latitude="53.8238072"></osm-marker>
           </osm-map>
 
         </paper-header-panel>
