fix filled polygons closes #3

--- a/demo/index.html
+++ b/demo/index.html
@@ -100,7 +100,13 @@
                 <osm-point latitude="53.699089" longitude="10.603718"></osm-point>
                 <osm-point latitude="53.694089" longitude="10.608718"></osm-point>
                 <osm-point latitude="53.689089" longitude="10.603718"></osm-point>
-                <osm-point latitude="53.694089" longitude="10.598718"></osm-point>
+              </osm-poly>
+
+              <osm-poly fill-opacity="0.5" fill-color="red" stroke-color="red">
+                <osm-point latitude="54.699089" longitude="11.603718"></osm-point>
+                <osm-point latitude="54.694089" longitude="11.608718"></osm-point>
+                <osm-point latitude="54.689089" longitude="11.603718"></osm-point>
+                <osm-point latitude="54.694089" longitude="11.598718"></osm-point>
               </osm-poly>
           </osm-map>
 
