--- a/osm-poly.html
+++ b/osm-poly.html
@@ -1,6 +1,10 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="osm-point.html">
-<script src="http://openlayers.org/en/v3.11.2/build/ol.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="http://openlayers.org/en/v3.9.0/css/ol.css" type="text/css">
+<script src="http://openlayers.org/en/v3.9.0/build/ol.js"></script>
 
 <!--
 The `osm-poly` element provides a possibility to draw on the `osm-map`element.
@@ -106,25 +110,27 @@ Example:
           points.push(point.position());
         });
 
-        if(this.closed)
-          points.push(this.queryAllEffectiveChildren('osm-point')[0].position());
-
-        geometry = new ol.geom.LineString(points, 'XY');
-
-        // need to transfrom the lineString described in 
-        // https://groups.google.com/forum/#!topic/ol3-dev/TqLw0RRJLXw
-        geometry.transform('EPSG:4326', 'EPSG:3857');
-
-        console.log(this._computeColor())
+        var features;
+        if(this.closed) {
+          features = new ol.Feature({
+              geometry: new ol.geom.Polygon([points])
+          });
+          features.getGeometry().transform('EPSG:4326', 'EPSG:3857');
+        }
+        else {
+          var geometry = new ol.geom.LineString(points, 'XY');
+          geometry.transform('EPSG:4326', 'EPSG:3857')
+          features = new ol.Feature({ geometry: geometry });     
+        }
 
         return new ol.layer.Vector({
           source: new ol.source.Vector({
-              features: [new ol.Feature({ geometry: geometry })]
+              features: [features]
           }),
           style: new ol.style.Style({
               stroke: new ol.style.Stroke({ color: this.strokeColor, width: this.width }),
               fill: new ol.style.Fill({
-                color: this._computeColor()
+                color: this.closed ? this._computeColor() : 'rgba(0,0,0,0)'
               })
           }),
           name: 'routeLayer'
