--- a/osm-map.html
+++ b/osm-map.html
@@ -81,8 +81,7 @@ The `osm-map` element renders a OpenStreetMap.
          */
         layers: {
           type: Array,
-          value: [],
-          readOnly: true
+          value: []
         }
       },
 
